# passwd-manager

./: README.md  pyproject.toml
src/passwd_manager/: main.py  passwd.py
src/passwd_manager/data/: passw.py  passw.yml  passwd.py
